--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- -عنصر من h1 يتم استهدافه باستخدام اسم class ويتم تغيير لون الخط ولون الخلفيه له عن طريق جافاسكربت.
@@ -15,8 +16,13 @@
  -->
 
 <h1 class="welcome">hello</h1>
-
-
+<p id="p1" class="p-1">this is p </p>
+<img src="" alt="">
+<ul >
+    <li class="list">1</li>
+    <li class="list">2</li>
+    <li class="list">3</li>
+</ul>
 
     <script src="lab1.js"></script>
 </body>
